# Decentralized-Audit-Transparency-Ledger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  docker-compose.yml
.github/workflows/: dependency-review.yml  publish-python-sdk.yml  reproducible-build.yml  test.yml
api/: openapi.yaml
api/graphql/: Dockerfile  package.json  tsconfig.json
api/graphql/src/: resolvers.ts  schema.ts  server.ts
api/rest/: Dockerfile  package.json
api/rest/src/: server.ts
api/ws/: package.json
api/ws/src/: server.js
bridge/docs/: bridge-architecture.md
bridge/evm/: Verifier.sol
bridge/evm/test/: Verifier.ts
bridge/relayer/: Dockerfile  cache.test.ts  index.ts
docker/: Dockerfile.api  Dockerfile.contract  Dockerfile.ui  README.md  docker-compose.yml  wasm.Dockerfile
docs/: api.md  benchmarks.md  cli.md  dependency-review.md  deployment.md  error-reference.md  event-schema.md  fees.md  integration-testing.md  reproducible-builds.md  security-audit.md  troubleshooting.md  upgrade-guide.md
docs/adr/: ADR-001-append-only-log.md  ADR-002-logging-limits.md  ADR-003-owner-governance.md  ADR-004-storage-key-design.md  ADR-005-event-emission.md
scripts/: deploy_testnet.sh
sdk/js/: README.md  package.json
sdk/js/src/: AuditLedgerClient.ts  index.ts  types.ts
sdk/js/src/__tests__/: client.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/audit_ledger/: __init__.py  client.py  models.py
sdk/python/tests/: test_sdk.py
services/notifier/: notifier.ts  package.json
src/: bench.rs  boundary_tests.rs  concurrent_tests.rs  cross_contract_tests.rs  fee_tests.rs  fuzz.rs  lib.rs  proptest.rs  regression_tests.rs  test.rs  upgrade_tests.rs
tests/: integration_testnet.rs  test_dependency_review.sh
tools/metrics-exporter/src/: index.js
ui/src/app/explorer/: ExplorerClient.tsx
