[package]
name = "audit-ledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
rand = "0.8"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
debug = 0
strip = "symbols"
