[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "audit-ledger-sdk"
version = "0.1.0"
description = "Python SDK for the AuditLedger Soroban smart contract"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AuditLedger Contributors"},
]
keywords = ["stellar", "soroban", "audit", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "stellar-sdk>=12.0.0",
]
[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
analytics = ["pandas>=2.0.0", "matplotlib>=3.5.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1.0"]

[project.urls]
"Source" = "https://github.com/daddygokings-art/Decentralized-Audit-Transparency-Ledger"
"Bug Tracker" = "https://github.com/daddygokings-art/Decentralized-Audit-Transparency-Ledger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["audit_ledger*"]
